# fractalbits

./: Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml
common/protos/: bss_ops.proto  nss_ops.proto  rss_ops.proto
crates/api_server/: Cargo.toml
crates/api_server/src/: blob_client.rs  blob_storage.rs  config.rs  handler.rs  lib.rs  main.rs
crates/api_server/src/blob_storage/: all_in_bss_single_az_storage.rs  retry.rs  s3_hybrid_single_az_storage.rs
crates/api_server/src/handler/: bucket.rs  common.rs
crates/api_server/src/handler/bucket/: create_bucket.rs  head_bucket.rs
crates/api_server/src/handler/common/: s3_error.rs
crates/api_server/src/handler/delete/: abort_multipart_upload.rs  delete_object.rs
crates/api_server/src/handler/get/: get_object.rs  get_object_attributes.rs  list_parts.rs
crates/api_server/src/handler/head/: head_object.rs
crates/api_server/src/handler/post/: complete_multipart_upload.rs  create_multipart_upload.rs
crates/api_server/src/handler/put/: copy_object.rs  put_object.rs  rename_object.rs
crates/api_server/tests/: checksums.rs
crates/bench_rpc/: Cargo.toml
crates/bench_rpc/src/rpc/: mod.rs
crates/common/data_types/src/: bucket.rs  lib.rs  object_layout.rs  observer_types.rs  volume.rs
crates/common/file_ops/src/: lib.rs
crates/common/rpc_clients/bss/src/: rpc.rs
crates/common/rpc_clients/bss/tests/: blob_io.rs
crates/common/rpc_clients/client_common/: Cargo.toml
crates/common/rpc_clients/client_common/src/: generic_client.rs  lib.rs
crates/common/rpc_clients/nss/src/: rpc.rs  stats.rs
crates/common/rpc_clients/rss/src/: rpc.rs
crates/common/rpc_codecs/bss_codec/src/: message.rs
crates/common/volume_group_proxy/: Cargo.toml
crates/common/volume_group_proxy/src/: data_vg_proxy.rs  lib.rs
crates/container-all-in-one/src/: orchestrator.rs
crates/fractal-vfs/: Cargo.toml
crates/fractal-vfs/src/: backend.rs  cache.rs  config.rs  disk_cache.rs  error.rs  inode.rs  lib.rs  prefetch.rs  slice_mut.rs  vfs.rs  writeback.rs
crates/fractal-vfs/src/vfs/: attr.rs  dir.rs  drain.rs  namespace.rs  read.rs  write.rs
crates/fs_server/: Cargo.toml
crates/fs_server/fractal-fuse/: CHANGELOG.md  Cargo.toml  README.md
crates/fs_server/fractal-fuse/examples/: hello.rs
crates/fs_server/fractal-fuse/src/: abi.rs  dispatch.rs  filesystem.rs  lib.rs  mount.rs  notify.rs  ring.rs  session.rs  types.rs
crates/fs_server/fractal-fuse/tests/: notify_inval_entry.rs  readdir_panic.rs
crates/fs_server/fractal-nfs/: Cargo.toml  README.md
crates/fs_server/fractal-nfs/src/: compio_server.rs  config.rs  dispatch.rs  lib.rs  nfs3_types.rs  nfs3_wire.rs  rpc.rs  tokio_server.rs  xdr.rs
crates/fs_server/fractal-nfs/tests/: startup_cleanup.rs
crates/fs_server/src/: config.rs  error.rs  fuse_server.rs  main.rs  nfs_server.rs  vfs.rs
docs/: HACKING.md  on-prem-cluster-creation.md
infra/aws-cdk/lib/: ec2-utils.ts  fractalbits-bench-vpc-stack.ts  fractalbits-meta-stack.ts  fractalbits-vpc-stack.ts
infra/fractalbits-bootstrap/: Cargo.toml
infra/fractalbits-bootstrap/src/: api_server.rs  aws.rs  bench_server.rs  bss_server.rs  common.rs  config.rs  discovery.rs  main.rs  nss_server.rs  root_server.rs
infra/fractalbits-bootstrap/src/bench_server/: yaml_get.rs  yaml_mixed.rs  yaml_put.rs
xtask/: Cargo.toml
xtask/common/src/: lib.rs
xtask/src/: cmd_build.rs  cmd_nightly.rs  cmd_precheckin.rs  cmd_repo.rs  cmd_run_tests.rs  cmd_service.rs  cmd_untar_bench.rs  main.rs
xtask/src/cmd_deploy/: build.rs  common.rs  create_cluster.rs  upload.rs
xtask/src/cmd_deploy/aws/: config_gen.rs
xtask/src/cmd_deploy/gcp/: config_gen.rs  vpc.rs
xtask/src/cmd_run_tests/: bss_repair.rs  fs_server.rs
xtask/src/cmd_run_tests/fs_server/: fuse.rs  pjdfs.rs
