[workspace]
members = [
    "crates/**",
    "infra/fractalbits-bootstrap",
    "xtask",
]
# workaround due to cargo's limitations
# (no wildcard support in exclude, or optional/nested workspace)
exclude = [
    "crates/api_server/benches",
    "crates/api_server/src",
    "crates/api_server/tests",
    "crates/container-all-in-one/src",
    "crates/bench_rpc/src",
    "crates/common/aws_signature/src",
    "crates/common/data_blob_tracking/src",
    "crates/common/data_types/src",
    "crates/common/metrics_wrapper/src",
    "crates/common/rpc_clients/bss/src",
    "crates/common/rpc_clients/bss/tests",
    "crates/common/rpc_clients/client_common/src",
    "crates/common/rpc_clients/nss/src",
    "crates/common/rpc_clients/rss/src",
    "crates/common/rpc_codecs/bss_codec/src",
    "crates/common/rpc_codecs/codec_common/src",
    "crates/common/file_ops/src",
    "crates/common/rpc_codecs/nss_codec/src",
    "crates/common/rpc_codecs/rss_codec/src",
    "crates/common/test_common/src",
    "crates/common/volume_group_proxy/src",
    "crates/fs_server/src",
    "crates/fs_server/fractal-fuse/src",
    "crates/fs_server/fractal-fuse/examples",
    "crates/fs_server/fractal-nfs/src",
    "crates/fs_server/fractal-nfs/tests",
    "crates/fractal-s3/demo",
    "crates/fractal-s3/src",
    "crates/ha/multi_az/src",
    "crates/ha/multi_az/data_blob_resync_server/src",
    "crates/ha/bss_repair/src",
    "crates/ha/nss_role_agent/src",
    "crates/ha/src",
    "crates/ha/.git",
    "crates/root_server/admin/src",
    "crates/root_server/src",
    "crates/root_server/.git",

]
resolver = "2"

[workspace.dependencies]
aws_signature = { path = "crates/common/aws_signature" }
data_types = { path = "crates/common/data_types" }
data_blob_tracking = { path = "crates/common/data_blob_tracking", default-features = false }
volume_group_proxy = { path = "crates/common/volume_group_proxy", default-features = false }
metrics_wrapper = { path = "crates/common/metrics_wrapper" }
rpc_client_common = { path = "crates/common/rpc_clients/client_common", default-features = false }
rpc_client_bss = { path = "crates/common/rpc_clients/bss", default-features = false }
rpc_client_nss = { path = "crates/common/rpc_clients/nss", default-features = false }
rpc_client_rss = { path = "crates/common/rpc_clients/rss", default-features = false }
rpc_codec_common = { path = "crates/common/rpc_codecs/codec_common" }
bss_codec = { path = "crates/common/rpc_codecs/bss_codec" }
nss_codec = { path = "crates/common/rpc_codecs/nss_codec" }
file_ops = { path = "crates/common/file_ops" }
rss_codec = { path = "crates/common/rpc_codecs/rss_codec" }
test_common = { path = "crates/common/test_common" }
xtask_common = { path = "xtask/common" }

thiserror = "2.0.18"
fake = "4.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
tokio = "1.49.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4.13.0", features = ["rustls-0_23"] }
actix-files = "0.6.10"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prost = "0.14"
bytes = "1.11.1"
tracing = "0.1.44"
strum = { version = "0.28.0", features = ["derive"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
uuid = { version = "1.21.0", features = ["v4", "v7", "fast-rng"] }
rkyv = { version = "0.8.15", features = ["uuid-1", "unaligned"] }
rand = "0.10.0"
hex = "0.4.3"
chrono = "0.4.44"
dashmap = "6.1.0"
httpdate = "1.0.3"
futures = "0.3.32"
pin-project-lite = "0.2.17"
serde_json = "1.0.149"
toml = { version = "1.0", default-features = false, features = ["parse", "display", "serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
hmac = "0.12"
crc32fast = "1.5.0"
reed-solomon-simd = "3.1.0"
xxhash-rust = {version = "0.8.15", features = ["xxh3"] }
lru = "0.13"
blake2 = "0.10.6"
base64 = "0.22.1"
crc32c = "0.6.8"
crc64fast-nvme = "1.2.1"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["asm-aarch64"] }
url = "2.5.8"
http-body = "1.0.1"
serde_bytes = "0.11"
percent-encoding = "2.3.2"
http-range = "0.1.5"
aws-config = "1.8.16"
openssl = { version = "0.10.75", features = ["vendored"]}
rustls = "0.23"
rustls-pemfile = "2.2"
aws-sdk-dynamodb = "1.111.0"
etcd-client = "0.18"
log = "0.4.29"
metrics = "0.24"
metrics-exporter-statsd = "0.9.0"
metrics-exporter-prometheus = "0.18.1"
moka = "0.12"
tikv-jemallocator = "0.6"
parking_lot = "0.12"
governor = "0.10"
config = {version = "0.15", features = ["toml"]}
socket2 = { version = "0.6", features = ["all"] }
reqwest = { version = "0.13", features = ["json"] }
futures-util = "0.3.32"
anyhow = "1.0.102"
regex = "1.12.3"
core_affinity = "0.8"
urlencoding = "2"
compio-runtime = { version = "0.11", features = ["time"] }
compio-net = "0.11"
compio-io = "0.9"
compio-buf = "0.8"
compio-fs = "0.11"
compio-macros = "0.1"
libc = "0.2"
nix = { version = "0.31", features = ["fs"] }
firestore = "0.43"
gcloud-sdk = { version = "0.25.8", default-features = false }

# Dev dependencies
aws-sdk-s3 = "1.132.0"
cmd_lib = { version = "2.0", features = ["tracing"] }
tracing-test = {version = "0.2.6", features = ["no-env-filter"]}
env_logger = "0.11.9"
num_cpus = "1.17.0"
rayon = "1.11.0"
rlimit = "0.11.0"
tempfile = "3.26.0"
rstest = "0.26.1"
colored = "3"
comfy-table = "7.2"
glob = "0.3"
dialoguer = "0.12"
indicatif = "0.18"

# Build dependencies
prost-build = "0.14"
