[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
cmd_lib.workspace = true
env_logger.workspace = true
rlimit.workspace = true
clap.workspace = true
strum.workspace = true
xtask_common.workspace = true
colored.workspace = true
test_common.workspace = true
data_types.workspace = true
rpc_client_bss = { workspace = true, features = ["tokio-runtime"] }
aws-sdk-s3.workspace = true
aws-config.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
comfy-table.workspace = true
glob.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
toml.workspace = true
regex.workspace = true
xxhash-rust.workspace = true
libc.workspace = true
bytes.workspace = true
thiserror.workspace = true
reed-solomon-simd.workspace = true
crc32fast.workspace = true
