[package]
name = "api_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc_client_common = { workspace = true, features = ["tokio-runtime"] }
rpc_client_nss = { workspace = true, features = ["tokio-runtime"] }
rpc_client_bss = { workspace = true, features = ["tokio-runtime"] }
rpc_client_rss = { workspace = true, features = ["tokio-runtime"] }
nss_codec.workspace = true
file_ops.workspace = true
aws_signature.workspace = true
data_types.workspace = true
volume_group_proxy = { workspace = true, features = ["tokio-runtime"] }
metrics_wrapper.workspace = true
metrics = { workspace = true, optional = true }

serde.workspace = true
config.workspace = true
actix-web.workspace = true
actix-files.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
tracing.workspace = true
strum.workspace = true
quick-xml.workspace = true
uuid.workspace = true
rkyv.workspace = true
rand.workspace = true
hex.workspace = true
chrono.workspace = true
httpdate.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
serde_json.workspace = true
clap.workspace = true
thiserror.workspace = true
base64.workspace = true
crc32c.workspace = true
crc32fast.workspace = true
crc64fast-nvme.workspace = true
sha1.workspace = true
sha2.workspace = true
url.workspace = true
http-body.workspace = true
serde_bytes.workspace = true
percent-encoding.workspace = true
http-range.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
metrics-exporter-statsd = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
moka = { workspace = true, features = ["future"] }
tikv-jemallocator.workspace = true
governor.workspace = true
futures-util.workspace = true
socket2.workspace = true
core_affinity.workspace = true
parking_lot.workspace = true

[dev-dependencies]
aws_signature = { workspace = true, features = ["testutils"] }
test_common.workspace = true
cmd_lib.workspace = true
sha1.workspace = true
tempfile.workspace = true
rstest.workspace = true
url.workspace = true
reqwest.workspace = true

[features]
default = []
metrics_statsd = ["dep:metrics-exporter-statsd", "metrics_wrapper/metrics", "dep:metrics", "rpc_client_common/metrics", "volume_group_proxy/metrics"]
metrics_prometheus = ["dep:metrics-exporter-prometheus", "metrics_wrapper/metrics", "dep:metrics", "rpc_client_common/metrics", "volume_group_proxy/metrics"]
