[package]
name = "rewrk_rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc_client_nss = { workspace = true, features = ["tokio-runtime"] }
rpc_client_bss = { workspace = true, features = ["tokio-runtime"] }
data_types.workspace = true

anyhow.workspace = true
bytes.workspace = true
colored.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
regex.workspace = true
rlimit.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
clap.workspace = true
xxhash-rust.workspace = true
