[package]
name = "fractal-vfs"
version = "0.1.0"
edition = "2024"
description = "The fractalbits storage-cluster VFS: inode + cache + RPC backend used by the FUSE/NFS/etc adapters."
license = "Apache-2.0"
repository = "https://github.com/fractalbits-labs/fractalbits-main"

[dependencies]
# Storage backend (rpc clients + codecs).
rpc_client_common = { workspace = true, default-features = false, features = ["compio-runtime"] }
rpc_client_bss = { workspace = true, default-features = false, features = ["compio-runtime"] }
rpc_client_nss = { workspace = true, default-features = false, features = ["compio-runtime"] }
rpc_client_rss = { workspace = true, default-features = false, features = ["compio-runtime"] }
volume_group_proxy = { workspace = true, default-features = false, features = ["compio-runtime"] }
nss_codec.workspace = true
file_ops.workspace = true
rss_codec.workspace = true
bss_codec.workspace = true
rpc_codec_common.workspace = true
data_types.workspace = true
metrics_wrapper.workspace = true

# Async runtime.
compio-runtime.workspace = true
compio-net.workspace = true
compio-io.workspace = true
compio-buf.workspace = true
compio-fs.workspace = true

# Common.
prost.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true
moka = { workspace = true, features = ["sync"] }
dashmap.workspace = true
parking_lot.workspace = true
futures.workspace = true
uuid.workspace = true
config.workspace = true
rand.workspace = true
xxhash-rust.workspace = true
lru.workspace = true
libc.workspace = true
nix.workspace = true

# Pulled in only for the FUSE passthrough call sites inside vfs.rs.
# TODO: lift passthrough out of VfsCore into the FUSE adapter so
# fractal-vfs becomes transport-agnostic.
fractal-fuse = { path = "../fs_server/fractal-fuse" }

[dev-dependencies]
compio-macros.workspace = true
