[package]
name = "fs_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fs_server"
path = "src/main.rs"

[dependencies]
fractal-fuse = { path = "fractal-fuse" }
fractal-vfs = { path = "../fractal-vfs" }

clap.workspace = true
config.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
compio-runtime.workspace = true
libc.workspace = true
