[package]
name = "volume_group_proxy"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["rpc_client_bss/tokio-runtime", "rpc_client_common/tokio-runtime", "dep:tokio"]
compio-runtime = ["rpc_client_bss/compio-runtime", "rpc_client_common/compio-runtime", "dep:compio-runtime"]
metrics = ["metrics_wrapper/metrics", "dep:metrics"]

[dependencies]
bytes.workspace = true
futures.workspace = true
metrics_wrapper.workspace = true
metrics = { workspace = true, optional = true }
rand.workspace = true
rpc_client_bss.workspace = true
rpc_client_common.workspace = true
data_types.workspace = true
tokio = { workspace = true, optional = true, features = ["full"] }
compio-runtime = { workspace = true, optional = true }
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true
reed-solomon-simd.workspace = true
crc32fast.workspace = true

[dev-dependencies]
serde_json.workspace = true
