[package]
name = "fractal-nfs"
version = "0.1.0"
edition = "2024"
description = "Minimal NFSv3 server, runtime-agnostic (tokio or compio backends)"
license = "Apache-2.0"
repository = "https://github.com/fractalbits-labs/fractalbits-main"
readme = "README.md"
keywords = ["nfs", "nfsv3", "rpc", "filesystem", "async"]
categories = ["network-programming", "filesystem"]

[features]
default = ["tokio-runtime"]
tokio-runtime = ["dep:tokio"]
compio-runtime = ["dep:compio-runtime", "dep:compio-net", "dep:compio-io", "dep:compio-buf"]

[dependencies]
bytes = "1.11"
tracing = "0.1"
libc = "0.2"
socket2 = { version = "0.6", features = ["all"] }
tokio-util = "0.7"

# Tokio backend (default).
tokio = { version = "1.40", features = ["rt", "net", "io-util"], optional = true }

# Compio backend.
compio-runtime = { version = "0.11", optional = true }
compio-net = { version = "0.11", optional = true }
compio-io = { version = "0.9", optional = true }
compio-buf = { version = "0.8", optional = true }
