[package]
name = "rpc_client_common"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio-runtime"]
tokio-runtime = []
compio-runtime = ["dep:compio-runtime", "dep:compio-net", "dep:compio-io"]
metrics = ["metrics_wrapper/metrics", "dep:metrics"]

[dependencies]
bytes.workspace = true
data_types.workspace = true
prost.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
rand.workspace = true
metrics_wrapper.workspace = true
metrics = { workspace = true, optional = true }
parking_lot.workspace = true
strum.workspace = true
socket2.workspace = true
rpc_codec_common.workspace = true
compio-runtime = { workspace = true, optional = true }
compio-net = { workspace = true, optional = true }
compio-io = { workspace = true, optional = true }
libc = "0.2"

[dev-dependencies]
bytemuck.workspace = true
xxhash-rust.workspace = true
